# Cosmic-mail

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
cosmic_mail/: __init__.py  main.py
cosmic_mail/api/: auth.py  deps.py
cosmic_mail/api/routes/: agents.py  approvals.py  attachments.py  domains.py  drafts.py  filter_rules.py  mailboxes.py  organizations.py  search.py  system.py  threads.py  webhooks.py
cosmic_mail/core/: config.py  database.py  security.py
cosmic_mail/domain/: models.py  repositories.py  schemas.py  validation.py
cosmic_mail/integrations/: __init__.py  blaxel.py
cosmic_mail/services/: agents.py  api_keys.py  attachments.py  conversations.py  dkim.py  dns.py  domains.py  filter_rules.py  inbound.py  james.py  mail_engine.py  mailboxes.py  message_utils.py  organizations.py  outbound.py  sync_manager.py  webhooks.py
cosmic_mail/web/: __init__.py
cosmic_mail/web/static/: api.js  app.css  app.js  index.html  state.js  templates.js
infra/: docker-compose.production.yml  env.production.example
infra/james/conf/: dnsservice.xml  imapserver.xml  mailetcontainer.xml  smtpserver.xml
infra/nginx/: cosmic-mail-http.conf
scripts/: blaxel_linux_smoke.py  deploy.sh  live_james_transport_smoke.py
tests/: conftest.py  helpers.py  test_agents_api.py  test_auth_api.py  test_blaxel_client.py  test_deliverability_api.py  test_domains_api.py  test_drafts_api.py  test_james_client.py  test_mailboxes_api.py  test_sync_api.py  test_sync_controls_api.py  test_web_ui.py
