[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-mail"
version = "0.1.0"
description = "Control plane for AI-agent email built around pluggable mail engines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",
    "dnspython>=2.6",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "uvicorn>=0.29",
    "python-multipart>=0.0.7",
    "aiofiles>=23.0",
    "dkimpy>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["cosmic_mail*"]

[tool.setuptools.package-data]
"cosmic_mail" = ["web/static/*"]
